--- a/src/components/welcome/welcome.css
+++ b/src/components/welcome/welcome.css
@@ -5,7 +5,7 @@
         width: 100%;
         height: 100%;
 
-        background-color: aliceblue;
+        /* background-color: aliceblue; */
 
         display: flex;
         flex-direction: column;
