--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -3,98 +3,109 @@
 @import url('https://fonts.googleapis.com/css2?family=Kosugi&display=swap');
 
 
-/* >>>>> CARD CONTAINER <<<<< */
-    .card{
-        width: 380px;
-        height: 490px;
-        padding: 20px;
+/* CARD CONTAINER */
+.card-container{
+    width: 35rem;
+    height: 20rem;
+    padding: 1rem;
 
-        background-color: transparent;
-        border: 1px solid black;
-        border-radius: 30px;
+    text-align: center;
 
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: flex-start;
+    background-color: linear-gradient(180deg, hsl(0 0% 98%), hsl(0 0% 95%));
+    border: 1px solid hsl(0 0% 80%);
+    border-radius: 10px;
+    box-shadow: 0px 0px 40px hsla(0, 0%, 80%, 0.63);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.card-container:hover{
+    background-color: hsl(0 0% 88%);
+}
+
+.covers{
+    background-color: transparent;
+    text-align: center;
+    font-size: 0.8rem;
+    color: hsl(0 0% 60%);
+    font-style: italic;
+}
+/* Responsive */
+@media screen and (max-width: 1770px) {
+    .card-container{
+        width: 35rem;
+    }
+}
+
+@media screen and (max-width: 1650px) {
+    .card-container {
+        width: 28rem;
+    }
+}
+
+@media screen and (max-width: 1441px) {
+    .card-container {
+        width: 25rem;
+    }
+}
+
+@media screen and (max-width: 1290px) {
+    .card-container h1{
+        font-size: 1.5rem;
     }
 
-    .cardTopic{
-        width: 50%;
-        font-size: 40px;
-        font-family: "Kosugi Maru", sans-serif;
-        font-weight: 400;
-        font-style: normal;
+    .card-container h2{
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .card-container {
+        width: 40rem;
+        height: 15rem;
     }
 
-    .cardContent{
-        font-size: 22px;
-        font-family: "Kosugi", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-    }
-    /* >>> RESPONSIVE <<< */
-    @media screen and (max-width: 1250px) {
-        .card{
-            width: 300px;
-            height: 400px;
-        }
-    
-        .cardTopic{
-            font-size: 30px;
-        }
-        
-        .cardContent{
-            font-size: 17px;
-        }
+    .card-container h1{
+        font-size: 1.5rem;
     }
 
-    @media screen and (max-width: 950px) {
-        .card{
-            width: 70%;
-            height: 400px;
-        }
-    
-        .cardTopic{
-            font-size: 34px;
-        }
-        
-        .cardContent{
-            font-size: 25px;
-        }
+    .card-container h2{
+        font-size: 1.5rem;
     }
+}
 
-    @media screen and (max-width: 810px) {
-        .cardTopic{
-            font-size: 32px;
-        }
-        
-        .cardContent{
-            font-size: 22px;
-        }
+@media screen and (max-width: 680px) {
+    .card-container {
+        width: 100%;
+        height: 15rem;
     }
+}
 
-    @media screen and (max-width: 620px) {
-        .cardTopic{
-            font-size: 30px;
-        }
-        
-        .cardContent{
-            font-size: 20px;
-        }
+@media screen and (max-width: 490px) {
+    .card-container {
+        height: 20rem;
     }
+}
 
-    @media screen and (max-width: 500px) {
-        .card{
-            width: 90%;
-        }
-    
-        .cardTopic{
-            font-size: 28px;
-        }
-        
-        .cardContent{
-            font-size: 18px;
-        }
-    }
-/*  */
+
+/* SELECTION */
+.normal{
+    background-color: linear-gradient(180deg, hsl(0 0% 98%), hsl(0 0% 95%));
+}
+
+.normal-level, .normal-des{
+    color: black;
+    background-color: transparent;
+}
+
+.selected{
+    background-color: black;
+}
+
+.selected-h2{
+    background-color: transparent;
+    color: white;
+}
