--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,53 +2,150 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Kosugi&display=swap');
 
+                /* font-size: 32px;
+                font-family: "Kosugi",
+                sans-serif;
+                font-weight: 400;
+                font-style: normal; */
 
-/* >>>>> HEADER <<<<< */
-    .header{
-        display: flex;
-        flex-direction: row;
+
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+/* Header */
+.header {
+    width: 100%;
+    height: 70px;
+    padding: 2rem;
+    backdrop-filter: blur(5px);
+    border-bottom: 1px solid #374151;
+    background-color: rgba(17, 24, 39, 0.8);
+
+    position: sticky;
+    top: 0;
+    z-index: 50;
+}
+
+.headerOverlap {
+    width: 100%;
+    height: 100%;
+
+    /* backdrop-filter: blur(50px); */
+    /* background-color: rgba(17, 24, 39, 0.8); */
+    border-bottom: #4B5563;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 45%;
+}
+
+/* Responsive */
+@media screen and (max-width: 700px) {
+    .headerOverlap {
+        gap: initial;
         justify-content: space-between;
-        align-items: center;
+    }
+}
 
-        padding: 25px;
+@media screen and (max-width: 380px) {
+    .header {
+        padding: 1rem;
+    }
+}
+
+
+/* Logo */
+.logo a {
+    text-decoration: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+
+}
+
+.logo h2 {
+    color: white;
+
+    font-size: 32px;
+    font-family: "Kosugi",
+    sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+/* Responsive */
+@media screen and (max-width: 500px) {
+    .logo h2 {
+        font-size: 1.2rem;
+    }
+}
+
+
+/* Navigation bar */
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 2rem;
+}
+
+.navbar a {
+    text-decoration: none;
+    font-size: 32px;
+    font-family: "Kosugi",
+    sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.Hsignin {
+    color: #d1d5db;
+}
+
+.Hsignup {
+    color: white;
+    width: 130px;
+    height: 40px;
+
+    background-color: #2563eb;
+    border-radius: 10px;
+
+    display: grid;
+    place-content: center;
+}
+
+/* Responsive */
+@media screen and (max-width: 500px) {
+    .navbar {
+        gap: 1rem;
     }
 
-    .header a{
-        text-decoration: none;
-        color: black;
+    .navbar a {
+        font-size: 0.8rem;
     }
 
-    .headerLogo{
-        font-size: 50px;
-        font-family: "Koulen", sans-serif;
-        font-weight: 400;
-        font-style: normal;
+    .Hsignup {
+        width: 100px;
+        height: 30px;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .navbar {
+        gap: 1rem;
     }
 
-    .headerNav{
-        font-size: 32px;
-        font-family: "Kosugi", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-    }
-    /* >>> RESPONSIVE <<< */
-    @media screen and (max-width: 900px) {
-        .headerLogo{
-            font-size: 24px;
-        }
-
-        .headerNav{
-            font-size: 20px;
-        }
+    .navbar a {
+        font-size: 0.8rem;
     }
 
-    @media screen and (max-width: 400px) {
-        .headerLogo{
-            font-size: 20px;
-        }
-
-        .headerNav{
-            font-size: 18px;
-        }
+    .Hsignup {
+        width: 90px;
+        height: 30px;
     }
-/*  */
+}
