--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,270 +1,187 @@
 @import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Kosugi&display=swap');
+/* font-size: 6.5rem;
+font-family: "Kosugi Maru",
+sans-serif;
+font-weight: 400;
+font-style: normal; */
 
-/* >>>>> HERO SECTION CONTAINER <<<<< */
-    .hero{
+/* font-size: 34px;
+font-family: "Kosugi",
+sans-serif;
+font-weight: 400;
+font-style: normal; */
+
+
+
+/* HERO */
+.hero{
+    width: 100%;
+    min-height: 100dvh;
+    padding: 1.5rem;
+    background-color: linear-gradient(135deg, hsl(0 0% 95%), hsl(0 0% 90%));
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+}
+/* Responsive */
+
+
+/* INTRO SECTION */
+.intro{
+    width: 100%;
+
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.intro h1{
+    font-size: 5rem;
+    font-family: "Kosugi Maru",
+    sans-serif;
+    font-weight: bolder;
+    font-style: normal;
+}
+
+.intro h2{
+    font-size: 2rem;
+    font-family: "Kosugi Maru",
+    sans-serif;
+    font-weight: bold;
+    font-style: normal;
+}
+
+.intro p{
+    width: 55%;
+
+    font-size: 1.2rem;
+    font-family: "Kosugi Maru",
+    sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+/* Responsive */
+@media screen and (max-width: 1230px) {
+    .intro p{
         width: 100%;
+    }
+}
 
-        display: flex;
+@media screen and (max-width: 950px) {
+    .intro h1{
+        font-size: 4rem;
+    }
+
+    .intro h2{
+        font-size: 1.5rem;
+    }
+
+    .intro p{
+        font-size: 1rem;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .intro{
+        gap: 1rem;
+    }
+
+    .intro h1{
+        font-size: 3rem;
+    }
+
+    .intro h2{
+        font-size: 1.2rem;
+    }
+
+    .intro p{
+        font-size: 0.9rem;
+        width: 100%;
+    }
+}
+
+
+
+/* LEVELS SECTION */
+.levels{
+    width: 100%;
+
+    font-family: "Kosugi Maru",
+    sans-serif;
+    font-style: normal;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.level-intro{
+    font-weight: bold;
+    text-align: center;
+}
+
+.options{
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+/* Responsive */
+@media screen and (max-width: 1280px) {
+    .options{
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        gap: 1.5rem;
     }
-    /* >>> RESPONSIVE <<< */
-    @media screen and (max-width: 950px) {
-        .hero{
-            
-        }
-    }
-/*  */
+}
 
 
-/* >>>>> INTRO TEXTS <<<<< */
-    .introText1{
-        padding-top: 20px;
-        padding-left: 60px;
-        padding-right: 60px;
-    }
+/* To Game */
+.to-game{
+    text-align: center;
 
-    .introText1, 
-    .introText2{
-        width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
 
-        font-size: 6.5rem;
-        font-family: "Kosugi Maru", sans-serif;
-        font-weight: 400;
-        font-style: normal;
+.to-game button{
+    background-color: black;
+    color: white;
 
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-    }
+    border: none;
+    outline: none;
+    border-radius: 8px;
 
-    .introText2{
-        padding: 2px;
-        margin-top: 10px;
-        height: 100%;
-        width: 45%;
-        
-        background-color: black;
-        color: white;
-        
-        display: grid;
-        place-content: center;
-    }
-    /* >>> RESPONSIVE <<< */
-    @media screen and (max-width: 1800px) {
-        .introText1{
-            padding-top: 1px;
-            /* padding: 30px; */
-        }
-        .introText1,
-        .introText2{
-            font-size: 5rem;
-        }
+    font-size: 1.5rem;
+    font-family: "Kosugi Maru",
+    sans-serif;
+    font-weight: bold;
+    font-style: normal;
 
-        .introText2{
-            /* margin-top: 1px;
-            width: 42%; */
-        }
-    }
+    width: 250px;
+    padding: 1rem;
+}
 
-    @media screen and (max-width: 1480px) {
-        .introText1{
-            padding-top: initial;
-        }
-        .introText1,
-        .introText2{
-            font-size: 4rem;
-        }
-    }
-
-    @media screen and (max-width: 1200px) {
-        .introText1,
-        .introText2{
-            font-size: 3rem;
-        }
-    }
-
-    @media screen and (max-width: 950px) {
-        .introText1{
-            padding-top: initial;
-            text-align: center;
-
-            width: 100%;
-
-            display: grid;
-            place-content: center;
-        }
-        .introText1,
-        .introText2{
-            font-size: 64px;
-        }
-
-        .introText2{
-            width: 70%;
-        }
-    }
-
-    @media screen and (max-width: 950px) {
-        .introText1,
-        .introText2{
-            font-size: 50px;
-        }
-    }
-
-    @media screen and (max-width: 670px) {
-        .introText1,
-        .introText2{
-            font-size: 50px;
-        }
-
-        .introText2{
-            width: 85%;
-        }
-    }
-
-    @media screen and (max-width: 570px) {
-        .introText2{
-            width: 100%;
-        }
-    }
-
-    @media screen and (max-width: 500px) {
-        .introText1{
-            padding-left: 60px;
-            padding-right: 60px;
-        }
-        .introText1,
-        .introText2{
-            font-size: 40px;
-        }
-    }
-
-    @media screen and (max-width: 500px) {
-        .introText1,
-        .introText2{
-            font-size: 30px;
-        }
-    }
-/*  */
-
-
-/* >>>>> HERO NAVIGATION SECTION <<<<< */
-    .heroNav{
-        padding-top: 40px;
-        padding-left: 60px;
-        padding-right: 60px;
-        width: 100%;
-
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    /* >>> HERO NAV <<< */
-    .heroNav nav{
-        padding: 20px;
-        
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        gap: 2rem;
-    }
-
-    .navDisplay{
-        text-decoration: none;
-        color: black;
-
-        font-size: 34px;
-        font-family: "Kosugi", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-    }
-    /* >>> RESPONSIVE <<< */
-    @media screen and (max-width: 1800px) {
-        .heroNav{
-            /* padding-left: 30px;
-            padding-right: 30px; */
-        }
-    }
-
-    @media screen and (max-width: 1480px) {
-        .heroNav{
-            /* padding-left: 30px;
-            padding-right: 30px; */
-        }
-
-        .navDisplay{
-            font-size: 25px;
-        }
-    }
-
-    @media screen and (max-width: 950px) {
-        .heroNav{
-            flex-direction: column;
-        }
-
-        .navDisplay{
-            font-size: 25px;
-        }
-    }
-
-    @media screen and (max-width: 500px) {
-        .heroNav{
-            padding-left: 30px;
-            padding-right: 30px;
-        }
-
-        .navDisplay{
-            font-size: 18px;
-        }
-    }
-
-    @media screen and (max-width: 390px) {
-        .navDisplay{
-            font-size: 16px;
-        }
-    }
-/*  */
-
-
-/* >>>>> VIEW NAV RESULTS <<<<< */
-    .viewNav{
-        height: 40.7rem;
-        width: 100%;
-        /* background-color: violet; */
-    }
-    /* >>> RESPONSIVE <<< */
-    @media screen and (max-width: 1800px) {
-        .viewNav{
-            height: 33.9rem;
-        }
-    }
-    @media screen and (max-width: 1480px) {
-        .viewNav{
-            height: 36rem;
-        }
-    }
-    @media screen and (max-width: 1239px) {
-        .viewNav{
-            height: 32rem;
-        }
-    }
-    @media screen and (max-width: 1200px) {
-        .viewNav{
-            height: 41.8rem;
-        }
-    }
-    @media screen and (max-width: 950px) {
-        .viewNav{
-            height: 34.5rem;
-        }
-    }
-    @media screen and (max-width: 500px) {
-        .viewNav{
-            height: 70dvh;
-        }
-    }
-/*  */
+.to-game p{
+    font-family: "Kosugi Maru",
+    sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    color: hsl(0 0% 40%);
+}
