--- a/src/pages/game/game.css
+++ b/src/pages/game/game.css
@@ -1,101 +1,177 @@
 @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
+/* font-size: 1.5rem;
+font-family: "Kosugi Maru",
+sans-serif;
+font-weight: bold;
+font-style: normal; */
 
-/* >>>>> GAME CONTAINER <<<<< */
-    .gameApp{
-        width: 100%;
 
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 2rem;
+/* GAME CONTAINER */
+.game-container{
+    width: 100%;
+    min-height: 100%;
+    padding: 2rem;
+
+    font-family: "Kosugi Maru",
+    sans-serif;
+    font-style: normal;
+    /* color: hsl(0 0% 40%); */
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.game-wrapper{
+    width: 80%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.3rem;
+}
+/* Responsive */
+@media screen and (max-width: 1150px) {
+    .game-container{
+        padding: 0.7rem;
     }
-    /* >>> RESPONSIVE <<<< */
-    @media screen and (max-width: 660px) {
-        .gameApp{
-            gap: 1rem;
-        }
-    }
-/*  */
-
-
-/* >>>>> GAME HEADER <<<<< */
-    .gameHeader{
+    .game-wrapper{
         width: 100%;
-        padding-left: 60px;
-        padding-right: 60px;
+    }
+}
 
-        display: flex;
+
+/* DETAILS */
+.details{
+    width: 100%;
+    padding: 1rem;
+
+    font-family: "Kosugi Maru",
+    sans-serif;
+    font-style: normal;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.details p{
+    color: hsl(0 0% 40%);
+}
+/* Responsive */
+@media screen and (max-width: 415px) {
+    .details{
+        min-height: 10px;
+
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
         gap: 1rem;
-
-        font-size: 4rem;
-        font-family: "Koulen", sans-serif;
-        font-weight: 400;
-        font-style: normal;
     }
+}
 
+
+/* QUIZ CONTAINER */
+.quiz-container{
+    width: 100%;
+    min-height: 20rem;
+    padding: 1rem;
+
+    background-color: hsl(0 0% 98%);
+
+    border: 1px solid hsl(0 0% 80%);
+    border-radius: 15px;
+    box-shadow: 0px 0px 20px hsl(0 0% 80%);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.question{
+    width: 100%;
+
+    background-color: transparent;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.quiz-options{
+    width: 100%;
+
+    background-color: transparent;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+/* Responsive */
+@media screen and (max-width: 750px) {
     .question{
-        width: 100%;
-
+        font-size: 1.1rem;
     }
-
-    .questionNumber{
-        width: 100%;
-        text-align: right;
-    }
-    /* >>> RESPONSIVE <<< */
-    @media screen and (max-width: 1100px) {
-        .gameHeader{
-            gap: 0.5rem;
-
-            font-size: 3.5rem;
-        }
-    }
-    @media screen and (max-width: 660px) {
-
-        .gameHeader{
-            padding-left: 30px;
-            padding-right: 30px;
-            gap: 0.5rem;
-
-            font-size: 2rem;
-        }
-    }
-/*  */
+}
 
 
-/* >>>>> NEXT BUTTON CONTAINER <<<<< */
-    .nextBTN{
-        width: 100%;
-        padding: 20px;
 
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-    }
+/* NEXT SECTION */
+.next-sec{
+    width: 100%;
 
-    .nextBTN button{
-                height: 70px;
-                    width: 150px;
-                
-                    outline: none;
-                    border: none;
-                    background-color: black;
-                    color: white;
-                
-                    font-size: 3rem;
-                    font-family: "Koulen", sans-serif;
-                    font-weight: 400;
-                    font-style: normal;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
 
-                    display: grid;
-                    place-content: center;
-    }
-    /* >>> RESPONSIVE <<< */
-    @media screen and (max-width: 1100px) {
-        
-    }
-/*  */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.next , .prev{
+    padding: 0.5rem;
+    width: 150px;
+
+    font-family: "Kosugi Maru",
+    sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.2rem;
+
+    border-radius: 40px;
+
+    outline: none;
+    border: none;
+    background-color: black;
+    color: white;
+}
+
+.back-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.quit{
+    padding: 0.5rem;
+    width: 150px;
+
+    font-family: "Kosugi Maru",
+        sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.2rem;
+
+    border-radius: 40px;
+
+    outline: none;
+    border: none;
+    background-color: hsl(0 65% 55%);
+    color: black;
+}
