--- a/src/pages/gameOver/gameOver.css
+++ b/src/pages/gameOver/gameOver.css
@@ -34,6 +34,8 @@
     }
 
     .quizCards{
+        width: 100%;
+        
         display: flex;
         flex-direction: column;
         align-items: center;
