--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -20,10 +20,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+
+    transition: 200ms;
 }
 
 .card-container:hover{
-    background-color: hsl(0 0% 88%);
+    transition: 200ms;
+    scale: 1.1;
 }
 
 .covers{
